# repo-proof-index

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release-artifacts.yml
conformance/proof-surface/v0.1/: README.md  manifest.json
conformance/proof-surface/v0.1/invalid/: bad-check-status.packet.json  empty-claims-checks.packet.json  unknown-root-field.packet.json
conformance/proof-surface/v0.1/valid/: minimal.packet.json
docs/: PROOF-SURFACE-CASE-CONTRIBUTING.md  PROOF-SURFACE-INTEROP.md  PROOF-SURFACE-PACKET-v0.1.md  PROOF-SURFACE-REGISTRY.json  PROOF-SURFACE-RESEARCH-HARNESS-v0.1.md
docs/brand/: README.md
docs/superpowers/plans/: 2026-06-13-proof-surface-research-harness.md
examples/: demo.py
examples/contracts/: proof-surface-packet.json  sample-backend-capability.json  sample-product-usecase.json  sample-witness-receipt.json
examples/malformed/: not-object.json
project-docs/specs/: SPEC-repo-proof-index-forward-delivery.md
research/proof-surface/v0.1/: cases.json
schemas/: proof-surface-packet.schema.json
scripts/: check_proof_surface_conformance.py  export_proof_surface_contract.py  score_proof_surface_research.py
src/repo_proof_index/: __init__.py  cli.py  indexer.py  organ_rows.py  packet.py
tests/: test_cli_errors.py  test_forward_delivery_contract.py  test_indexer.py  test_research_harness.py
tests/fixtures/: backend.json  product.json  receipt.json
