[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repo-proof-index"
version = "0.1.0"
description = "Reviewer-ready index CLI for proof packets, receipts, and JSON contracts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["json", "proof", "receipts", "evidence", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
repo-proof-index = "repo_proof_index.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
