[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repo-proof-index"
version = "0.1.1"
description = "Index proof packets and receipts into reviewer-ready summaries without making approval decisions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["json", "proof", "receipts", "evidence", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
]
dependencies = ["proof-surface>=0.1"]

[project.urls]
Homepage = "https://github.com/HarperZ9/repo-proof-index"
Repository = "https://github.com/HarperZ9/repo-proof-index"
Issues = "https://github.com/HarperZ9/repo-proof-index/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
repo-proof-index = "repo_proof_index.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
